[gd_scene load_steps=3 format=3 uid="uid://br6t6px7iknxx"]

[ext_resource type="Script" uid="uid://m1m6qt2yqq1g" path="res://components/operator_controls.gd" id="1_myr44"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d7u1h"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="OperatorControls" type="CanvasLayer"]
script = ExtResource("1_myr44")

[node name="ButtonContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -50.5
offset_right = 49.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
rotation = 3.1415927
pivot_offset = Vector2(49, 50)

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonContainer"]
layout_mode = 2

[node name="NextLevelButton" type="Button" parent="ButtonContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "NEXT LEVEL
"

[node name="RestartButton" type="Button" parent="ButtonContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "RESTART"

[node name="CloseButton" type="Button" parent="ButtonContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "CLOSE"

[node name="OpenButton" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 64.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_d7u1h")

[connection signal="pressed" from="ButtonContainer/VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="ButtonContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ButtonContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="OpenButton" to="." method="_on_open_button_pressed"]
